--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.0
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
